<resources>
    <string name="app_name">NatureGo</string>
    <string name="phone"><b>Phone</b></string>
    <string name="password"><b>Password</b></string>
    <string name="login">Login</string>
    <string name="no_account_yet">No account yet? Create one</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="recover">Recover</string>
    <string name="name">Name</string>
    <string name="family_name">Family Name</string>
    <string name="select_gender">Select Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="enter_birthday">Enter Birthday</string>
    <string name="reenter_password">Re-Enter password</string>
    <string name="create_account">Create Account</string>
    <string name="already_member">Already a member? click here to login.</string>
    <string name="signup">Signup</string>
    <string name="creating_account">Creating Account…</string>
    <string name="phone_already_registered">The phone number is already registered.</string>
    <string name="registration_completed">Registration completed</string>
    <string name="registration_failed">Registration failed.</string>
    <string name="please_select_gender">Please select your gender</string>
    <string name="age_varification">You must be at least 6 years old to register</string>
    <string name="atleast_2_characters">at least 2 characters</string>
    <string name="valid_email">enter a valid email address</string>
    <string name="valid_phone">Enter Valid Mobile Number</string>
    <string name="valid_password">between 4 and 10 alphanumeric characters</string>
    <string name="recovering_passowrd">Recovering Account…</string>
    <string name="valid_repassword">Password Do not match</string>
    <string name="back_to_menu">Back To Menu</string>
    <string name="stop_hike">Stop Hike</string>
    <string name="enter_hike_name">Enter hike name"</string>
    <string name="save">Save</string>
    <string name="dont_save">Dont Save</string>
    <string name="start_hike">Start Hike</string>
    <string name="track_history">Track History</string>
    <string name="my_collection">My Collection</string>
    <string name="information">Information</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="school_name">School name</string>
    <string name="class_name">Class</string>
    <string name="city_name">City</string>
    <string name="confirm">confirm</string>
    <string name="enter_dates">Enter dates</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="get_all">Get all</string>
    <string name="get_by_dates">By dates</string>
    <string name="dates_summery">Dates summery</string>
    <string name="back">Back</string>
    <string name="reset">Reset</string>
    <string name="welcome">Welcome</string>
    <string name="information_info">
"The app is designed for 4th - 6th graders as part of a program
Ministry of Education studies in science / acting classes available
Nature and gardens.

Going into space, we will search for a variety of animals in a stratified reality
Through the smartphone, animal photography and information) Living environment, saturation, food
Etc ... (and game hints)

Document the route and continue discussion and road
The purpose of the game is to save the animals)
Honey Badger etc .... (from extinction)

Oren Noam
oratzio@gmail.com

Micha Leon
michalion81@hotmail.com

"for additional information visit us at our
        <a href="https://oratzio.wixsite.com/naturego">website</a>
    </string>
    <string name="mapboxtoken">
        pk.eyJ1IjoibmF0dXJlZ28iLCJhIjoiY2p6ankwYXBjMGRyNjNtcW02cTlzN2g4MCJ9.ws8Grmb0aT6i-5f2lvMzsA
    </string>
    <string name="camera">Camera</string>
    <string name="my_location">My Location</string>
    <string name="connection_failed">Failed to connect to the server.</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="authentication">"Authenticating…"</string>
    <string name="foreground_service">NatureGo GPS</string>
    <string name="close_naturego">Are you sure you want to close NatureGo ?</string>
    <string name="invalid_details">Invalid phone or password.</string>
    <string name="enter_valid_phone">enter a valid phone number</string>
    <string name="password_length">between 4 and 10 alphanumeric characters</string>
    <string name="name_already_exists">The name is already exist</string>
    <string name="permission_external_storage">Permission denied to read your External storage</string>
    <string name="foreground_service_example">Hike in progress</string>
    <string name="enable_location">Enable Location"</string>
    <string name="location_settings_not_enabled">Your locations setting is not enabled. Please enabled it in settings menu.</string>
    <string name="location_settings">Location Settings</string>
    <string name="resume_hike">Resume Hike</string>
    <string name="logout_varification">Are you sure you want to logout ?</string>
    <string name="hike_in_progress">Hike in progress, To save enter hike name</string>
    <string name="permission_to_use_application">You must accept permissions to use this application.</string>
    <string name="allow">Allow</string>
    <string name="password_sent_to_email">The password is sent to your email.</string>
    <string name="fetching_data">"Fetching data…"</string>
    <string name="please_select_date">Please select date</string>
    <string name="failed_to_fetch_data">Failed to fetch data."</string>
    <string name="total_hikes">Total Hikes: </string>
    <string name="total_photos">"Total Photo Count: </string>
    <string name="total_distance">Total Distance: </string>
    <string name="meters"> Meters</string>
    <string name="total_time_on_track">Total time spent on track: </string>
    <string name="naturego_statistics">NatureGo\'s Statistics</string>
    <string name="date_summery">Dates Summery</string>
    <string name="hike_details">Hike Details</string>
    <string name="demote">Demote</string>
    <string name="promote">Promote</string>
    <string name="delete">Delete</string>
    <string name="varify_promote">Are you sure you want to promote this user?</string>
    <string name="varify_demote">Are you sure you want to demote this user?</string>
    <string name="varify_delete">Are you sure you want to delete this user?</string>
    <string name="user_information">"User Information"</string>
    <string name="teacher">Teacher</string>
    <string name="user">User</string>
    <string name="hike_saved">Hike saved.</string>
    <string name="failed_to_save_hike">Failed to save hike.</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="hike_name">Hike name</string>
    <string name="main_menu">Menu menu</string>
    <string name="admin_panel">Admin panel</string>
    <string name="statistics">Statistics</string>
    <string name="trivia">Trivia</string>
    <string name="settings">Settings</string>
    <string name="user_location_permission_explanation">
        sasatttttt
    </string>
    <string name="new_location">
        2,2
    </string>
    <string name="correct_answer">Correct answer!</string>
    <string name="wrong_answer">Wrong answer!</string>
    <string name="tag">Description</string>
    <string name="language_already_set">The system already in the chosen language</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="action_settings">Settings</string>
    <string name="forgot_password_click_here">Forgot password? Click here</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="change_language">Change Language</string>
    <string name="title_activity_new_main_menu">NewMainMenu</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="gecko_question_1">The gecko is a kind of:</string>
    <string name="gecko_question_1_wrong_0">Lizard</string>
    <string name="gecko_question_1_wrong_1">Newt</string>
    <string name="gecko_question_1_wrong_2">Dragon</string>
    <string name="gecko_question_1_wrong_3">Toad</string>
    <string name="gecko_question_2">Which of the following improbabilities are shown by a gecko?</string>
    <string name="gecko_question_2_wrong_0">The female gecko can reproduce without copulating with a male.</string>
    <string name="gecko_question_2_wrong_1">The gecko resurrects after being dead for a few hours.</string>
    <string name="gecko_question_2_wrong_2">When the gecko dies, they transform into several tiny bacteria and keep living.</string>
    <string name="gecko_question_2_wrong_3">A single gecko can devour a whole buffalo.</string>
    <string name="gecko_question_3">What part of the gecko can be regrown if it is cut from the body?</string>
    <string name="gecko_question_3_wrong_0">Tail</string>
    <string name="gecko_question_3_wrong_1">Hindlimb</string>
    <string name="gecko_question_3_wrong_2">Forelimb</string>
    <string name="gecko_question_3_wrong_3">Head</string>
    <string name="gecko_question_4">What is the skin color of the ordinary house gecko?</string>
    <string name="gecko_question_4_wrong_0">Brown</string>
    <string name="gecko_question_4_wrong_1">White</string>
    <string name="gecko_question_4_wrong_2">Black</string>
    <string name="gecko_question_4_wrong_3">Red</string>
    <string name="gecko_question_5">What do geckos feed on?</string>
    <string name="gecko_question_5_wrong_0">Insects</string>
    <string name="gecko_question_5_wrong_1">Bird droppings</string>
    <string name="gecko_question_5_wrong_2">Fruits</string>
    <string name="gecko_question_5_wrong_3">Food grains</string>
    <string name="hoopoe_question_1">The hoopoe was chosen as the national bird of the State of ___.</string>
    <string name="hoopoe_question_1_wrong_0">Israel</string>
    <string name="hoopoe_question_1_wrong_1">Russia</string>
    <string name="hoopoe_question_1_wrong_2">Germany</string>
    <string name="hoopoe_question_1_wrong_3">Spain</string>
    <string name="hoopoe_question_2">What are the main color of the Hoopoe ?</string>
    <string name="hoopoe_question_2_wrong_0">Brown-Yellow</string>
    <string name="hoopoe_question_2_wrong_1">Red</string>
    <string name="hoopoe_question_2_wrong_2">Black</string>
    <string name="hoopoe_question_2_wrong_3">Green</string>
    <string name="hoopoe_question_3">How many eggs does the Hoopoe may lay?</string>
    <string name="hoopoe_question_3_wrong_0">5\-6</string>
</resources>